fix word wrap, ghost enter and ghost cursor on user menu and cv header name element

--- a/src/shared/style/app/_helpers.scss
+++ b/src/shared/style/app/_helpers.scss
@@ -70,3 +70,7 @@
 .pre-line {
 	white-space: pre-line;
 }
+
+.break-word {
+	word-break: break-word;
+}
